--- a/Untitled8.ipynb
+++ b/Untitled8.ipynb
@@ -10,62 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FOAZUL {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "25a21105",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FOAZUL Islam\n"
+      "FOAZUL\n"
      ]
     }
    ],
    "source": [
-    "print(\"FOAZUL bjghkjg\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4cc6d5e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"FOAZUL bjghkjg\")"
+    "print(\"FOAZUL\")"
    ]
   },
   {
